--- a/src/main/resources/views/fragments/newsitem/newsitem.html
+++ b/src/main/resources/views/fragments/newsitem/newsitem.html
@@ -1,5 +1,6 @@
-<li data-th-id="|newsitem-${newsitem.id}|" data-th-class="newsitem" data-th-fragment="newsitem">
-    <img data-th-src="${newsitem.photo}" class
-    <h3 data-th-if="${rule.heading}" data-th-text="${rule.heading}"></h3>
-    <p data-th-if="${rule.text}" data-th-utext="${rule.text}"></p>
+<li data-th-id="|newsitem-${newsitem.id}|" class="newsitem" data-th-fragment="newsitem">
+    <img data-th-src="${newsitem.photo}" class="image" />
+    <h3 data-th-text="${newsitem.title}" />
+    <p class="text" data-th-if="${newsitem.text}" data-th-text="${newsitem.text}" />
+    <p class="text" data-th-if="${newsitem.date}" data-th-text="${newsitem.date}" />
 </li>
