--- a/src/main/resources/assets/css/sidebar.css
+++ b/src/main/resources/assets/css/sidebar.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 #sidebar {
-    background-color: black;
+    background-color: #333;
     color: white;
     width: 150px;
     padding: 0;
