--- a/src/main/resources/assets/css/sidebar.css
+++ b/src/main/resources/assets/css/sidebar.css
@@ -32,3 +32,12 @@ html, body {
     text-align: center;
     font-size: 12pt;
 }
+
+.fas {
+    font-size: 19pt;
+}
+
+#sidebar p {
+    margin-top: 7px;
+    padding: 0;
+}
